fix: use common styles and fix center alignment

--- a/_sass/theme/_colors.scss
+++ b/_sass/theme/_colors.scss
@@ -1,5 +1,5 @@
 $canvas-base: #ffffff;
-$content-base: #000000;
+$content-base: #344054;
 $utility-theme-color: $primary-color;
 $canvas-inverse: #000000;
 $content-inverse: #ffffff;
